# npc-smarts

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: dataset.rs  download.rs  experiment.rs  lib.rs  main.rs
