[package]
name = "npc-smarts"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "End-to-end NPC SMARTS evolution over the published distilled teacher splits."
repository = "https://github.com/earth-metabolome-initiative/npc-smarts"
readme = "README.md"
keywords = ["smarts", "chemistry", "npc", "zenodo", "evolution"]
categories = ["science", "command-line-utilities"]

[dependencies]
arrow-array = "58.1.0"
arrow-schema = "58.1.0"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.4"
parquet = { version = "58.1.0", default-features = false, features = ["arrow", "zstd"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smarts-evolution = { git = "https://github.com/earth-metabolome-initiative/smarts-evolution", branch = "main", features = ["indicatif"] }
smarts-rs = { git = "https://github.com/earth-metabolome-initiative/smarts-rs", branch = "main" }
smiles-parser = { git = "https://github.com/earth-metabolome-initiative/smiles-parser", branch = "main", default-features = false }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
zenodo-rs = { version = "0.1.6", features = ["checksums"] }

[lints.clippy]
all = { level = "deny", priority = -3 }
pedantic = { level = "deny", priority = -2 }
cargo = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
multiple_crate_versions = "allow"
module_name_repetitions = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
overflow-checks = false
